--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
       - cloudsmith/install-cli
       - run:
           command: |
-            .circleci/publish-cloudsmith.sh img hwp/hwp-repo ${PKG_DISTRO}/${PKG_RELEASE}
+            .circleci/publish-cloudsmith.sh img hwp/bbn-repo ${PKG_DISTRO}/${PKG_RELEASE}
           no_output_timeout: 40m
   do-all:
     steps:
